--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,33 @@
 #banner .container .min-container {
   font-size: 12rem;
   color: var(--main-title);
-  padding: 2rem 4rem;
+  padding: 1rem 2rem;
   background: #2b2b2b;
   border-radius: 1rem;
   overflow: hidden;
+}
+
+#banner .container .min-container img {
+  width: 12rem;
+  margin-left: 4rem;
+  cursor: pointer;
+}
+
+#banner .container .min-container .min-header {
+  width: 100%;
+  height: 4rem;
+  padding: 4rem;
+  margin-bottom: 2rem;
+  background: #FAFAFA;
+  display: flex;
+  align-items: center;
+  border-radius: 2rem;
+}
+
+#banner .container .min-container .min-header h4 {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #222224;
 }
 
 #code_area {
@@ -210,7 +233,7 @@
   max-width: 800px;
   max-height: 600px;
   overflow-y: auto;
-  background: #fafafa;
+  background: #31363F;
   padding: 20px;
   border-radius: 10px;
   font-size: 1.4rem;
@@ -222,7 +245,7 @@
 
 .popup-content .header-popup {
   padding: 1.2rem 2rem;
-  background: #313131;
+  background: #3c414d;
   border-radius: 1rem;
   margin-bottom: 1rem;
   display: flex;
@@ -233,7 +256,6 @@
 .popup-content .header-popup h2 {
   color: #FAFAFA;
   font-size: 2.4rem;
-  opacity: .8;
 }
 
 .popup-content .header-popup .Btn {
